<resources>
    <string name="app_name" translatable="false">Reporter</string>
    <string name="STR_NAVIGATION_DASHBOARD">Dashboard</string>
    <string name="STR_NAVIGATION_REPORTS">Reports</string>
    <string name="STR_NAVIGATION_SETTINGS">Settings</string>
    <string name="STR_ACTION_DASHBOARD">Dashboard</string>
    <string name="STR_ACTION_REPORTS">Reports</string>
    <string name="STR_ACTION_SETTINGS">Settings</string>
    <string name="STR_ACTION_FILTER">Filter</string>
    <string name="STR_ACTION_DATE">Date</string>
    <string name="STR_ACTION_DIVISIONS">Divisions</string>
    <string name="STR_ACTION_SALES_MIX">SalesMix</string>
    <string name="STR_ACTION_GOLDEN">Golden</string>
    <string name="STR_LOGIN_LOGIN">Login</string>
    <string name="STR_LOGIN_PASSWORD">Password</string>
    <string name="STR_LOGIN_BUTTON">Login</string>
    <string name="STR_PROPERTY">Property</string>
    <string name="STR_PROPERTY_MASTER"  translatable="false">Master</string>
    <string name="STR_PROPERTY_FRANCHISE"  translatable="false">Franchise</string>
    <string name="STR_PROPERTY_SPV"  translatable="false">SPV</string>
    <string name="STR_PROPERTY_GOVERNET"  translatable="false">Governet</string>
    <string name="STR_FORMAT">Format</string>
    <string name="STR_FORMAT_COFFEESHOP"  translatable="false">Coffeshop</string>
    <string name="STR_FORMAT_ESPRESSIT"  translatable="false">Espressit</string>
    <string name="STR_FILTER_DEFAULT">Set default</string>
    <string name="STR_FILTER_SAVED">Set saved</string>
    <string name="STR_FILTER_ALL">All</string>
    <string name="STR_FILTER_COUNTRY">Country</string>
    <string name="STR_FILTER_ORGANIZATION">Organization</string>
    <string name="STR_FILTER_CITY">City</string>
    <string name="STR_FILTER_DIVISION">Division</string>
    <string name="STR_FILTER_APPLY">Apply</string>
    <string name="STR_REPORT_NAME_DIVISIONS">Divisions</string>
    <string name="STR_REPORT_NAME_SALES_MIX">Sales Mix</string>
    <string name="STR_REPORT_NAME_GOLDEN">Golden</string>
    <string name="STR_REPORT_NAME_CARD">Card</string>
    <string name="STR_REPORT_DESCRIPTION_DIVISIONS">very important</string>
    <string name="STR_REPORT_DESCRIPTION_SALES_MIX">По сотрудникам: сравнение продаж по категориям</string>
    <string name="STR_REPORT_DESCRIPTION_GOLDEN">По сотрудникам: количество проданных товаров по категориям</string>
    <string name="STR_REPORT_DESCRIPTION_CARD">description</string>
    <string name="STR_REPORT_DIV">Division: %1$s</string>
    <string name="STR_REPORT_PERIOD">Period: from %1$s to %2$s</string>
    <string name="STR_REPORT_DASH_NOW">now</string>
    <string name="STR_REPORT_DASH_YESTERDAY">yesterday</string>
    <string name="STR_REPORT_DASH_PROGRESS_NAME">Plan-Fact</string>
    <string name="STR_REPORT_DASH_PLAN">Plan</string>
    <string name="STR_REPORT_DASH_FACT">Fact</string>
    <string name="STR_REPORT_DASH_TODAY">Today:</string>
    <string name="STR_REPORT_DASH_MONTH">Month:</string>
    <string name="STR_SETTINGS_VERSION">Version: %1$s</string>
    <string name="STR_SETTINGS_USER">User: %1$s</string>
    <string name="STR_SETTINGS_DATE">Date: %1$s</string>
    <string name="STR_SETTINGS_ANIMATION">Animation</string>
    <string name="STR_SETTINGS_BUTTON">Change User</string>
    <string name="STR_DIALOG_TITTLE">Are you sure?</string>
    <string name="STR_DIALOG_POSITIVE">YES</string>
    <string name="STR_DIALOG_NEGATIVE">NO</string>
    <string name="TOAST_PRESS_TWICE_TO_EXIT">Press twice to exit</string>
    <string name="TOAST_INCORRECT">Username or password is incorrect</string>
    <string name="TOAST_AUTHORIZATION_ERROR">Authorization error</string>
    <string name="TOAST_REPORT_NOTHING">Not found</string>
    <string name="ERROR_DESC_NO_NETWORK">Network unavailable</string>
    <string name="ERROR_DESC_NO_DATA">Nothing to send</string>
    <string name="ERROR_DESC_REQUEST_ERROR">Request error</string>
    <string name="ERROR_DESC_UNAUTHORIZED">Unauthorized</string>
    <string name="ERROR_DESC_FORBIDDEN">Access denied</string>
    <string name="ERROR_DESC_NOT_FOUND">Not found</string>
    <string name="ERROR_DESC_LOGIN_ERROR">Login error</string>
    <string name="ERROR_DESC_SERVER_ERROR">Server error</string>
    <string name="ERROR_DESC_SERVICE_UNAVAILABLE">Service unavailable</string>
    <string name="ERROR_DESC_ALREADY_EXISTS">Already exists</string>
    <string name="ERROR_DESC_UNKNOWN">Unknown error</string>
    <string name="fa_glass" translatable="false">&#xf000;</string>
    <string name="fa_music" translatable="false">&#xf001;</string>
    <string name="fa_search" translatable="false">&#xf002;</string>
    <string name="fa_envelope_o" translatable="false">&#xf003;</string>
    <string name="fa_heart" translatable="false">&#xf004;</string>
    <string name="fa_star" translatable="false">&#xf005;</string>
    <string name="fa_star_o" translatable="false">&#xf006;</string>
    <string name="fa_user" translatable="false">&#xf007;</string>
    <string name="fa_film" translatable="false">&#xf008;</string>
    <string name="fa_th_large" translatable="false">&#xf009;</string>
    <string name="fa_th" translatable="false">&#xf00a;</string>
    <string name="fa_th_list" translatable="false">&#xf00b;</string>
    <string name="fa_check" translatable="false">&#xf00c;</string>
    <string name="fa_times" translatable="false">&#xf00d;</string>
    <string name="fa_close" translatable="false">&#xf00d;</string>
    <string name="fa_remove" translatable="false">&#xf00d;</string>
    <string name="fa_search_plus" translatable="false">&#xf00e;</string>
    <string name="fa_search_minus" translatable="false">&#xf010;</string>
    <string name="fa_power_off" translatable="false">&#xf011;</string>
    <string name="fa_signal" translatable="false">&#xf012;</string>
    <string name="fa_cog" translatable="false">&#xf013;</string>
    <string name="fa_gear" translatable="false">&#xf013;</string>
    <string name="fa_trash_o" translatable="false">&#xf014;</string>
    <string name="fa_home" translatable="false">&#xf015;</string>
    <string name="fa_file_o" translatable="false">&#xf016;</string>
    <string name="fa_clock_o" translatable="false">&#xf017;</string>
    <string name="fa_road" translatable="false">&#xf018;</string>
    <string name="fa_download" translatable="false">&#xf019;</string>
    <string name="fa_arrow_circle_o_down" translatable="false">&#xf01a;</string>
    <string name="fa_arrow_circle_o_up" translatable="false">&#xf01b;</string>
    <string name="fa_inbox" translatable="false">&#xf01c;</string>
    <string name="fa_play_circle_o" translatable="false">&#xf01d;</string>
    <string name="fa_repeat" translatable="false">&#xf01e;</string>
    <string name="fa_rotate_right" translatable="false">&#xf01e;</string>
    <string name="fa_refresh" translatable="false">&#xf021;</string>
    <string name="fa_list_alt" translatable="false">&#xf022;</string>
    <string name="fa_lock" translatable="false">&#xf023;</string>
    <string name="fa_flag" translatable="false">&#xf024;</string>
    <string name="fa_headphones" translatable="false">&#xf025;</string>
    <string name="fa_volume_off" translatable="false">&#xf026;</string>
    <string name="fa_volume_down" translatable="false">&#xf027;</string>
    <string name="fa_volume_up" translatable="false">&#xf028;</string>
    <string name="fa_qrcode" translatable="false">&#xf029;</string>
    <string name="fa_barcode" translatable="false">&#xf02a;</string>
    <string name="fa_tag" translatable="false">&#xf02b;</string>
    <string name="fa_tags" translatable="false">&#xf02c;</string>
    <string name="fa_book" translatable="false">&#xf02d;</string>
    <string name="fa_bookmark" translatable="false">&#xf02e;</string>
    <string name="fa_print" translatable="false">&#xf02f;</string>
    <string name="fa_camera" translatable="false">&#xf030;</string>
    <string name="fa_font" translatable="false">&#xf031;</string>
    <string name="fa_bold" translatable="false">&#xf032;</string>
    <string name="fa_italic" translatable="false">&#xf033;</string>
    <string name="fa_text_height" translatable="false">&#xf034;</string>
    <string name="fa_text_width" translatable="false">&#xf035;</string>
    <string name="fa_align_left" translatable="false">&#xf036;</string>
    <string name="fa_align_center" translatable="false">&#xf037;</string>
    <string name="fa_align_right" translatable="false">&#xf038;</string>
    <string name="fa_align_justify" translatable="false">&#xf039;</string>
    <string name="fa_list" translatable="false">&#xf03a;</string>
    <string name="fa_outdent" translatable="false">&#xf03b;</string>
    <string name="fa_dedent" translatable="false">&#xf03b;</string>
    <string name="fa_indent" translatable="false">&#xf03c;</string>
    <string name="fa_video_camera" translatable="false">&#xf03d;</string>
    <string name="fa_picture_o" translatable="false">&#xf03e;</string>
    <string name="fa_image" translatable="false">&#xf03e;</string>
    <string name="fa_photo" translatable="false">&#xf03e;</string>
    <string name="fa_pencil" translatable="false">&#xf040;</string>
    <string name="fa_map_marker" translatable="false">&#xf041;</string>
    <string name="fa_adjust" translatable="false">&#xf042;</string>
    <string name="fa_tint" translatable="false">&#xf043;</string>
    <string name="fa_pencil_square_o" translatable="false">&#xf044;</string>
    <string name="fa_edit" translatable="false">&#xf044;</string>
    <string name="fa_share_square_o" translatable="false">&#xf045;</string>
    <string name="fa_check_square_o" translatable="false">&#xf046;</string>
    <string name="fa_arrows" translatable="false">&#xf047;</string>
    <string name="fa_step_backward" translatable="false">&#xf048;</string>
    <string name="fa_fast_backward" translatable="false">&#xf049;</string>
    <string name="fa_backward" translatable="false">&#xf04a;</string>
    <string name="fa_play" translatable="false">&#xf04b;</string>
    <string name="fa_pause" translatable="false">&#xf04c;</string>
    <string name="fa_stop" translatable="false">&#xf04d;</string>
    <string name="fa_forward" translatable="false">&#xf04e;</string>
    <string name="fa_fast_forward" translatable="false">&#xf050;</string>
    <string name="fa_step_forward" translatable="false">&#xf051;</string>
    <string name="fa_eject" translatable="false">&#xf052;</string>
    <string name="fa_chevron_left" translatable="false">&#xf053;</string>
    <string name="fa_chevron_right" translatable="false">&#xf054;</string>
    <string name="fa_plus_circle" translatable="false">&#xf055;</string>
    <string name="fa_minus_circle" translatable="false">&#xf056;</string>
    <string name="fa_times_circle" translatable="false">&#xf057;</string>
    <string name="fa_check_circle" translatable="false">&#xf058;</string>
    <string name="fa_question_circle" translatable="false">&#xf059;</string>
    <string name="fa_info_circle" translatable="false">&#xf05a;</string>
    <string name="fa_crosshairs" translatable="false">&#xf05b;</string>
    <string name="fa_times_circle_o" translatable="false">&#xf05c;</string>
    <string name="fa_check_circle_o" translatable="false">&#xf05d;</string>
    <string name="fa_ban" translatable="false">&#xf05e;</string>
    <string name="fa_arrow_left" translatable="false">&#xf060;</string>
    <string name="fa_arrow_right" translatable="false">&#xf061;</string>
    <string name="fa_arrow_up" translatable="false">&#xf062;</string>
    <string name="fa_arrow_down" translatable="false">&#xf063;</string>
    <string name="fa_share" translatable="false">&#xf064;</string>
    <string name="fa_mail_forward" translatable="false">&#xf064;</string>
    <string name="fa_expand" translatable="false">&#xf065;</string>
    <string name="fa_compress" translatable="false">&#xf066;</string>
    <string name="fa_plus" translatable="false">&#xf067;</string>
</resources>